my second commit to portofolio

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 				<div class="col-md-8 col-lg-8">
 					<div class="about-content">
 						<p class="text-right">
-							I am SUMEET,a java developer and a fullstack web developer.I am an enthusiastic, self-motivated, reliable, responsible and hard working person. I am a mature team worker and adaptable to all challenging situations. I am able to work well both in a team environment as well as using own initiative. I am able to work well under pressure and adhere to strict deadlines.  
+							I am SUMEET,a java  java developer and a fullstack web developer.I am an enthusiastic, self-motivated, reliable, responsible and hard working person. I am a mature team worker and adaptable to all challenging situations. I am able to work well both in a team environment as well as using own initiative. I am able to work well under pressure and adhere to strict deadlines.  
 						</p>
 					</div>
 					<div class="row">
